<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Qpid Dating</string>
    <string name="txt_splash_dec">This is my sologan !</string>
    <string name="tip_waitlogin">Logining,Please wait...</string>
    <string name="tip_loading">Loading...</string>
    <string name="tip_failed_to_load">Failed to load.</string>
    <string name="tip_reload">Reload</string>
    <string name="txt_hint_input_general">Say something...</string>
    <string name="txt_forget_password">Forgotten Password</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_almost_done">Almost Done!</string>
    <string name="txt_done">Done</string>
    <string name="txt_quo">\"</string>
    <string name="tip_emoji_unusable">You need to have an Intimacy Level of at least 10 to use advanced emoticions</string>
    <string name="tip_roomGiftCredit">Credit rebate: %1$s</string>
    <string name="txt_broadcaster">Broadcaster</string>
    <string name="txt_reservations">Bookings</string>
    <string name="txt_virtual_gift">Virtual Gift</string>
    <string name="common_hotlist_guide">Watch Hot Broadcasts</string>
    <string name="live_credits">%1$s credits</string>
    <string name="live_Credits">%1$s Credits</string>
    <string name="live_upgrade_title">New Version Availble</string>
    <string name="live_upgrade_msg">Please upgrade your app.</string>
    <string name="live_upgrade_btn">Upgrade</string>
    <string name="txt_login">Login</string>
    <string name="live_login_email_or_id">Login email or ID</string>
    <string name="live_login_password">Password</string>
    <string name="live_login_secure_code">Verification code</string>
    <string name="live_login_by_using_our_app_your_agree_to_the_term_of_user">By using our app, your agree to the Terms of Use and Privacy Policy</string>
    <string name="live_kickoff_by_im">You have been signed out because your account is logged in elsewhere.</string>
    <string name="txt_login_loading">Login...</string>
    <string name="login_forget_password">Forgot?</string>
    <string name="live_enter_your_email">Enter your email</string>
    <string name="live_enter_verification_code">Enter verification code</string>
    <string name="live_reset_Password">Forgotten Password</string>
    <string name="live_forgot_password">Forgotten password</string>
    <string name="a_password_reset_link_has_been_sent_to">A password retrieval email has been sent to your email account:</string>
    <string name="please_check_your_email_to_reset_password">Please check your email and follow the instructions to reset your login password.</string>
    <string name="live_main_title">CharmLive</string>
    <string name="anchor_list_empty">View Hot Broadcasts</string>
    <string name="hot_follow_program_desc_tips">%1$s · %2$s</string>
    <string name="live_main_drawer_menu_Message">Message</string>
    <string name="live_main_drawer_menu_Mail">Mail</string>
    <string name="live_main_drawer_menu_Flowers">Gifts &#38; Flowers</string>
    <string name="live_main_drawer_menu_GreetMail">Greeting Mail</string>
    <string name="live_main_drawer_menu_showtickets">My Show Tickets</string>
    <string name="live_main_drawer_menu_books">My Booking</string>
    <string name="live_main_drawer_menu_backpack">My Backpack</string>
    <string name="live_main_drawer_menu_hangout">Hang-out</string>
    <string name="live_main_drawer_menu_my_contact">My Contact</string>
    <string name="live_main_drawer_menu_services">Services</string>
    <string name="live_main_drawer_menu_broadcaster">Broadcasters</string>
    <string name="live_main_drawer_menu_others">Others</string>
    <string name="live_main_drawer_menu_changewebsize">Switch to our family sites</string>
    <string name="live_main_tab_discover">DISCOVER</string>
    <string name="live_main_tab_hangout">HANG-OUT</string>
    <string name="live_main_tab_follow">FOLLOW</string>
    <string name="live_main_tab_calendar">CALENDAR</string>
    <string name="live_main_room_list_public">Watch Now</string>
    <string name="live_main_room_list_private">Invite One-on-One</string>
    <string name="live_main_room_list_chat">Chat Now</string>
    <string name="live_main_room_list_mail">Send Mail</string>
    <string name="live_main_room_list_book">Book One-on-One</string>
    <string name="live_room_host_nickname_tips">%1$s\'s</string>
    <string name="live_room_public_flag">Premium Public</string>
    <string name="live_room_private_flag">One-on-One</string>
    <string name="live_room_error_pkg_gift_not_enough">The amount of gifts you try to send can not exceed the number of gifts in your storage.</string>
    <string name="txt_hint_input_barrage">%1$s credit per pop-up msg</string>
    <string name="liveroom_message_gift_x">x %1$d</string>
    <string name="tip_unReadLiveMsg">%d new messages</string>
    <string name="full_screen_live_room_input_hint">Type Your Message...</string>
    <string name="txt_send_msg">Send</string>
    <string name="liveroom_tariff_prompt_free_public">Public Broadcast is free to watch.</string>
    <string name="liveroom_tariff_prompt_pre_public">Premium Public Broadcast is billed at %1$s credit per minute.</string>
    <string name="liveroom_tariff_prompt_silver_private">One-on-One Broadcast is billed at %1$s credit per minute.</string>
    <string name="liveroom_tariff_prompt_golden_private">One-on-One Broadcast is billed at %1$s credit per minute.</string>
    <string name="liveroom_tariff_prompt_ok">Got it</string>
    <string name="liveroom_entrancecar_joined">%1$s Joined</string>
    <string name="liveroom_vipguest">Viewers</string>
    <string name="liveroom_header_vipguestdata">(%1$s/%2$s)</string>
    <string name="liveroom_close_room_notify">Are you sure to leave the current broadcast room?</string>
    <string name="liveroom_publish_no_permission_tips">Please allow CharmLive to access your camera to use this feature.</string>
    <string name="common_empty_text">No content yet.</string>
    <string name="common_btn_tap_to_retry">Reload</string>
    <string name="followinglist_empty_text">You have not followed anyone yet.</string>
    <string name="followinglist_empty_text_bottom">Add your favorite broadcasters here to discover fun now.</string>
    <string name="followinglist_logout_text">Login and view my following broadcasters.</string>
    <string name="live_common_noenough_money_tips">You don\'t have enough credits, please buy more.</string>
    <string name="live_common_noenough_money_for_2ways_tips">You don\'t have enough credits to start 2-way video, please buy more.</string>
    <string name="hangout_list_empty_text">No Hang-out circles are online at the moment.Please check back later.</string>
    <string name="liveroom_transition_waiting_anchor_start_tips">Waiting for the broadcaster to start broadcast.</string>
    <string name="liveroom_transition_invite_enterroom_countdown_tips">The broadcaster has accepted your invitation.One-on-One Broadcast will start in</string>
    <string name="liveroom_transition_anchorinvite_enterroom_countdown_tips">You have accepted the invitation. One-on-One broadcast will start in:</string>
    <string name="liveroom_transition_enterroom_countdown_tips"><![CDATA[The broadcaster is getting prepared. One-on-One broadcast will start in <b><font color=\"#FF8500\"><xliff:g id="left_seconds">%1$ss</xliff:g></font></b>]]></string>
    <string name="liveroom_transition_invite_deny_without_message">The broadcaster is not responding. Please try again later</string>
    <string name="liveroom_transition_invite_deny_with_message"><![CDATA[Sorry, the broadcaster has declined your invitation and left you a message as below:<br/>%1$s]]></string>
    <string name="liveroom_noenough_money_tips_watching">You are running out of credits. Please buy more credits to continue watching.</string>
    <string name="liveroom_noenough_money_tips_watch_end">You don\'t have enough credits to continue watching this broadcast.</string>
    <string name="liveroom_transition_broadcast_ended">Broadcast has ended. Please check back later.</string>
    <string name="liveroom_transition_anchor_invite_network_error">Failed to accept the invitation. Please try again.</string>
    <string name="liveroom_transition_unknown_error_default_tips">A problem occur while communicating with the server.</string>
    <string name="liveroom_transition_invite_overtime_default_tips">Failed to connect. Please try again later.</string>
    <string name="liveroom_transition_enterroom_overtime_default_tips">Failed to enter the broadcast room, please try again later.</string>
    <string name="liveroom_live_backgroud_too_long_finish">Sorry, since you have not viewed broadcast for over 1 minute, you are exited the broadcast room automatically.</string>
    <string name="liveroom_leaving_room_time_count_tips">Broadcast will end in&#160;</string>
    <string name="liveroom_leaving_room_time_count">%1$ss</string>
    <string name="liveroom_transition_recommand_tips">Recommended Broadcasters</string>
    <string name="liveroom_transition_countdown_unit">S</string>
    <string name="liveroom_transition_anchor_name_and_id"><![CDATA[<b><font color=\"#FFFFFF\"><xliff:g id="anchor_name">%1$s</xliff:g></font></b><font color=\"#999999\"><xliff:g id="anchor_id">(ID:%2$s)</xliff:g></font>]]></string>
    <string name="common_btn_ok">Ok</string>
    <string name="common_btn_cancel">Cancel</string>
    <string name="common_btn_sure">Sure</string>
    <string name="live_common_btn_add_credit">Add Credits</string>
    <string name="live_common_btn_yes">Yes</string>
    <string name="live_common_btn_no">No</string>
    <string name="live_common_btn_search">Search</string>
    <string name="live_common_btn_close">Close</string>
    <string name="live_common_btn_retry">Retry</string>
    <string name="live_common_start_oneonone">Start one-on-one</string>
    <string name="live_common_view_hotlist">View Hot Broadcasts</string>
    <string name="live_common_btn_nothanks">No,Thanks</string>
    <string name="live_talent_name">Talent:</string>
    <string name="live_talent_price">Price:</string>
    <string name="live_talent_tips">Your credits will be deducted when the broadcaster accepts your request.</string>
    <string name="live_talent_request">Request</string>
    <string name="left_menu_credits_add">Add</string>
    <string name="left_menu_credits_tips">Qpid Credits</string>
    <string name="left_menu_credits_balance">Balance: %1$s</string>
    <string name="Chat">Chat</string>
    <string name="chat_list_empty_title">Your Chat List is empty.</string>
    <string name="chat_list_empty_desc">How to get along with the broadcasters?\nYou may use any of our services:</string>
    <string name="One_on_One">One-on-One</string>
    <string name="hand_out_list_header_title">What is Hang-out?</string>
    <string name="hand_out_list_header_dont_show">&#160;Don\'t show again</string>
    <string name="hand_out_list_header_tips_long">With Hang-out you can enjoy fully interacting with broadcasters and their friends in the same live video Hang-out room. By clicking \"Start Hang-out\" below, you will first enter the broadcaster\'s Hang-out room. Then, through your or her invitation, friends of her invited will join the Hang-out for a great time together!\n\nHang-out is billed at %s credits per minute per broadcaster.</string>
    <string name="hand_out_list_header_btn">I GOT IT!</string>
    <string name="say_hi_dialog_tip_three_btn">The first response is FREE to read.\nStarting from the second response, 1\npost stamp or 1 credit will be\ndeducted from your account.</string>
    <string name="Dont_Ask_Again">Don\'t Ask Again</string>
    <string name="Mail">Mail</string>
    <string name="Public_Broadcast_next_line">Public\nBroadcast</string>
</resources>