<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/tvEmptyIcon"
        android:layout_width="@dimen/live_size_88dp"
        android:layout_height="@dimen/live_size_88dp"
        android:layout_marginBottom="@dimen/live_size_20dp"
        android:src="@drawable/icon_data_empty"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvEmptyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chat_list_empty_title"
        android:textColor="@color/live_text_color_black"
        android:textSize="@dimen/live_size_16sp" />

    <TextView
        android:id="@+id/tvEmptyDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/live_size_30dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/chat_list_empty_desc"
        android:textColor="@color/live_text_color_black"
        android:textSize="@dimen/live_size_14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/live_size_16dp"
        android:minHeight="70dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/live_size_20dp"
        android:paddingRight="@dimen/live_size_20dp">

        <LinearLayout
            android:id="@+id/llEmptyPublicBroadcast"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_live_circle_public_broadcast" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/live_size_6dp"
                android:gravity="center"
                android:text="@string/Public_Broadcast_next_line"
                android:textColor="@color/live_text_color_black"
                android:textSize="@dimen/live_size_12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_live_circle_one_on_one"
            android:gravity="center|bottom"
            android:text="@string/One_on_One"
            android:textColor="@color/live_text_color_black"
            android:textSize="@dimen/live_size_12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_live_circle_chat"
            android:gravity="center|bottom"
            android:text="@string/Chat"
            android:textColor="@color/live_text_color_black"
            android:textSize="@dimen/live_size_12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_live_circle_mail"
            android:gravity="center|bottom"
            android:text="@string/Mail"
            android:textColor="@color/live_text_color_black"
            android:textSize="@dimen/live_size_12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuide"
        style="@style/blueCircle6dpButton"
        android:layout_marginTop="@dimen/live_size_40dp"
        android:text="@string/live_common_btn_search" />
</LinearLayout>

