<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:button="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_MainActivity"
    android:orientation="vertical"
    android:padding="24dp"
    android:fitsSystemWindows="true">


    <com.qpidnetwork.livemodule.framework.widget.MaterialTextField
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/live_enter_your_email"
        android:inputType="text" />

    <RelativeLayout
        android:id="@+id/layoutCheckCode"
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <com.qpidnetwork.livemodule.framework.widget.MaterialTextField
            android:id="@+id/editTextCheckCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/live_enter_verification_code"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imageViewCheckCode"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:adjustViewBounds="true"
            android:onClick="onClickCheckCode"
            android:scaleType="fitCenter" />

    </RelativeLayout>


    <com.qpidnetwork.livemodule.view.ButtonRaised
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="56dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:onClick="onClickReset"
        button:background="@color/blue_color"
        button:elevation="2dp"
        button:title="@string/txt_continue"
        button:title_color="@color/white"
        button:touch_feedback="@drawable/touch_feedback_holo_dark" />


</LinearLayout>
