<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_custom_dialog">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/live_size_12dp">

        <TextView
            android:id="@+id/tv_talentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:textSize="14sp"
            android:textColor="@color/custom_dialog_txt_color_simple"
            android:text="@string/live_talent_name"/>
        <TextView
            android:id="@+id/tv_talentNameValue"
            android:layout_toRightOf="@id/tv_talentName"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#5d0e86"/>
        <TextView
            android:id="@+id/tv_talentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_talentName"
            android:layout_below="@id/tv_talentNameValue"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColorLink="@color/custom_dialog_txt_color_simple"
            android:textColor="@color/custom_dialog_txt_color_simple"
            android:text="@string/live_talent_price"/>

        <TextView
            android:id="@+id/tv_talentPriceValue"
            android:layout_toRightOf="@id/tv_talentPrice"
            android:layout_alignBottom="@id/tv_talentPrice"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#f7cd3a"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_talentTips"
            android:layout_below="@+id/tv_talentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="21dp"
            android:textSize="@dimen/custom_dialog_text_size_simple"
            android:textColor="#7d7d7d"
            android:text="@string/live_talent_tips"/>

        <LinearLayout
            android:layout_below="@id/tv_talentTips"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_cancelTalent"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="normal"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_interactive_video_cancel"
                android:text="@string/common_btn_cancel"/>

            <TextView
                android:id="@+id/tv_requestTalent"
                android:layout_width="80dp"
                android:layout_marginLeft="46dp"
                android:textStyle="normal"
                android:gravity="center"
                android:textColor="@color/talent_confirm_dialog_confirm"
                android:layout_height="match_parent"
                android:background="@drawable/bg_talent_confirm_request"
                android:text="@string/live_talent_request"/>

        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_closeConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingBottom="13dp"
        android:src="@drawable/ic_close_talent_confirm"/>
</FrameLayout>