<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:button="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_MainActivity"
    android:fitsSystemWindows="true"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/successInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#aec978"
        android:orientation="horizontal"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_live_done_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_almost_done"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/a_password_reset_link_has_been_sent_to"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Your email address"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="left"
                android:text="@string/please_check_your_email_to_reset_password"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <com.qpidnetwork.livemodule.view.ButtonRaised
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/successInfo"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:onClick="onClickCancel"
        button:background="@color/white"
        button:elevation="0dp"
        button:title="@string/txt_done"
        button:title_color="@color/text_color_dark"
        button:touch_feedback="@drawable/touch_feedback_round_border_white" />

</RelativeLayout>
